Swagger: Add tags and ignored useless route
