# w04-project-2-part-2-crud-operations-2/utils/swagger-output.json
@@ -11,18 +11,11 @@
     "http"
   ],
   "paths": {
-    "/": {
-      "get": {
-        "description": "",
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
     "/animals/dogs": {
       "get": {
+        "tags": [
+          "Dogs"
+        ],
         "description": "",
         "responses": {
           "200": {
@@ -34,6 +27,9 @@
         }
       },
       "post": {
+        "tags": [
+          "Dogs"
+        ],
         "description": "",
         "parameters": [
           {
@@ -79,6 +75,9 @@
     },
     "/animals/dogs/{id}": {
       "get": {
+        "tags": [
+          "Dogs"
+        ],
         "description": "",
         "parameters": [
           {
@@ -101,6 +100,9 @@
         }
       },
       "put": {
+        "tags": [
+          "Dogs"
+        ],
         "description": "",
         "parameters": [
           {
@@ -153,6 +155,9 @@
         }
       },
       "delete": {
+        "tags": [
+          "Dogs"
+        ],
         "description": "",
         "parameters": [
           {
@@ -177,6 +182,9 @@
     },
     "/animals/horses": {
       "get": {
+        "tags": [
+          "Horses"
+        ],
         "description": "",
         "responses": {
           "200": {
@@ -188,6 +196,9 @@
         }
       },
       "post": {
+        "tags": [
+          "Horses"
+        ],
         "description": "",
         "parameters": [
           {
@@ -233,6 +244,9 @@
     },
     "/animals/horses/{id}": {
       "get": {
+        "tags": [
+          "Horses"
+        ],
         "description": "",
         "parameters": [
           {
@@ -255,6 +269,9 @@
         }
       },
       "put": {
+        "tags": [
+          "Horses"
+        ],
         "description": "",
         "parameters": [
           {
@@ -307,6 +324,9 @@
         }
       },
       "delete": {
+        "tags": [
+          "Horses"
+        ],
         "description": "",
         "parameters": [
           {
